# talos

./: .env  Cargo.toml  Dockerfile  Procfile  rust-toolchain
migrations/2019-12-24-162919_create_users/: up.sql
migrations/2019-12-25-131813_create_posts/: up.sql
src/: main.rs  schema.rs  server.rs
src/config/: default.rs  mod.rs
src/database/: mod.rs
src/database/models/: users.rs
src/database/schema/: mod.rs
src/domain/: post.rs  user.rs
src/graphql/: mod.rs  post_resolver.rs
src/handler/: auth.rs  graphql.rs
src/schema/: mod.rs
