[package]
name = "talos"
version = "0.1.0"
authors = ["Ganesha Danu <ganeshadanu1@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.2"
dotenv = "0.15.0"
diesel = { version = "1.4.2", features = ["postgres"] }
