[package]
name = "talos"
version = "0.1.0"
authors = ["Ganesha Danu <ganeshadanu1@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.2"
dotenv = "0.15.0"
diesel = { version = "1.4.2", features = ["postgres", "uuid"] }
serde = "1.0.104"
serde_derive = "1.0.104"
bcrypt = "0.6.1"
uuid = { version = "0.6", features = ["v4"] }
frank_jwt = "3.1.2"
serde_json = "1.0.44"
juniper = "0.14.2"
juniper_rocket = "0.5.2"

[dependencies.rocket_contrib]
version = "0.4.2"
default-features = false
features = ["json", "diesel_postgres_pool", "uuid"]

[dev-dependencies.juniper]
version = "0.14.2"
features = ["expose-test-schema", "serde_json"]
